objects/PicklistMigFieldSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>PicklistMigFieldSetting - Hold the source and target fields , used in trigger and batch.</description>
    <fields>
        <fullName>GlobalPicklistField__c</fullName>
        <description>Hold the API of global picklist field</description>
        <label>GlobalPicklistField</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsProductGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked only for Object Product Group Field</description>
        <label>IsProductGroup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ObjectAPI__c</fullName>
        <description>Hold the object name</description>
        <label>ObjectAPI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceField__c</fullName>
        <description>Hold the API of source field</description>
        <label>SourceField</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetField__c</fullName>
        <description>Hold the API of target field</description>
        <label>TargetField</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>PicklistMigFieldSetting</label>
</CustomObject>